--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -11,6 +11,7 @@ a{
 .navbar-default .navbar-nav>li>a i{
 	color:white;
 	font-size: 28px;
+	font-weight: lighter;
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus,  .navbar-default .navbar-nav>li>a.active{
@@ -19,6 +20,9 @@ a{
 
 .navbar{
 	background-color: #06335C;
+	margin-bottom: 0;
+	border-radius: 0;
+	border:none;
 }
 
 .navbar-nav{
@@ -28,4 +32,64 @@ a{
 .navbar-brand{
 	height: auto;
 	padding:0;
+}
+
+.header-container{
+	text-align: center;
+	color:#FFF;
+	background-color: #06335C;
+}
+
+.header-container h2{
+	margin: 0;
+	padding: 20px 0;
+	font-weight: lighter;
+	text-transform: uppercase;
+}
+
+.circle-container{
+	width: 170px; height: 170px;
+	border-radius: 50%;
+	border: 2px solid white;
+    border-bottom-color: #13D2D3;
+    border-left-color: #13D2D3;
+    border-right-color: #13D2D3;
+    border-top-color: transparent;
+    transform: rotate(315deg);
+}
+
+.circle {
+    position: relative;
+    margin: 10px auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: #DDDDDD;
+}
+
+.function-container{
+	width:100%;
+	text-align: center;
+}
+
+.function{
+	display: inline-block;
+	padding: 100px 100px;
+}
+
+.function h3{
+	color: #13D2D3;
+	font-weight: lighter;
+	text-transform: uppercase;
+}
+
+.function p{
+	width: 180px;
+	text-align: justify;
+}
+
+.link{
+	display: block;
+	margin: 10px 0;
+	text-transform: uppercase;
 }
