--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -472,3 +472,7 @@ option, .rdtPicker {
 .modal-dialog input.form-control[type="text"], .modal-dialog textarea.form-control, .modal-dialog select.form-control{
 	color: #000;
 }
+
+.typeahead{
+	min-width: 160px;
+}
